(Re)simplify and fix up site-info dropdown with some stopgap styles

--- a/app/stylesheets/shell-window/toolbar-dropdown.less
+++ b/app/stylesheets/shell-window/toolbar-dropdown.less
@@ -150,21 +150,27 @@
 }
 
 .toolbar-site-info-dropdown {
-  // this dropdown is unique
-  // because the button is inside a site-info toolbar, which hides overflow,
-  // this dropdown has to be positioned out on its own
-  position: fixed;
-  left: 20px;
-  top: 70px;
+  position: absolute;
+  left: -80px;
+  top: 30px;
   width: 350px;
 
+  a {
+    &:extend(.link);
+  }
+
+  a:hover {
+    &:extend(.link:hover);
+  }
 
   .dropdown-items {
-    padding: @padding-component;
-
     &::before {
       left: 25px;
     }
+  }
+
+  .details {
+    padding: @padding-component;
   }
 
   .details-title {
