--- a/app/stylesheets/shell-window/toolbar-input-group.less
+++ b/app/stylesheets/shell-window/toolbar-input-group.less
@@ -115,8 +115,9 @@
 
       .title {
         font-size: 14px;
+        line-height: 14px;
         margin-top: 5px; // use margin so the border on the right will have spacing from the top border
-        padding: 2px 7px 1px 5px;
+        padding: 2px 7px 2px 5px;
         border: 0;
         border-right: 1px solid #ddd;
       }
