--- a/app/stylesheets/shell-window/toolbar.less
+++ b/app/stylesheets/shell-window/toolbar.less
@@ -67,7 +67,7 @@ body.darwin #toolbar {
       display: none;
     }
 
-    .toolbar-input-group .toolbar-site-info button .icon,
+    .toolbar-input-group .toolbar-site-info button .fa,
     .toolbar-input-group .toolbar-site-info button .title,
     .toolbar-input-group .nav-location-pretty .protocol,
     .toolbar-actions input,
